# DTU_thesis

./: .gitignore  README.md
prototype/: main.py
prototype/notebooks/: Symbolic stuff.ipynb  gps_fault_imu_radar.ipynb  gps_imu.ipynb  gps_imu_radar.ipynb  gps_imu_radar_ori.ipynb  gps_loss_imu.ipynb  gps_loss_imu_radar.ipynb  imu.ipynb  imu_drift.ipynb  radar_imu.ipynb  sensor_fusion_2d.ipynb  sensor_fusion_sim.ipynb  validation.ipynb  validation_no_heading.ipynb
prototype/src/: globals.py  helpers.py  preprocess.py  radar_odom.py  sensor_fusion.py  visualize.py
prototype/utils/: __init__.py  get_project_root.py
ros2/custom_msgs/: CMakeLists.txt  package.xml
ros2/custom_msgs/msg/: EsekfStateStamped.msg  HeadingStamped.msg  PositionStamped.msg  RadarOdometryStamped.msg
ros2/radar_odom/: CMakeLists.txt  package.xml
ros2/radar_odom/include/radar_odom/: radar_helpers.h  radar_odometry_functions.hpp  radar_odometry_node.hpp
ros2/radar_odom/src/: radar_odometry_node.cpp
ros2/sensor_fusion/: CMakeLists.txt  package.xml
ros2/sensor_fusion/include/irrlicht/: SOverrideMaterial.h
ros2/sensor_fusion/include/sensor_fusion/: esekf_functions.hpp  esekf_node.hpp  quaternion_functions.hpp
ros2/sensor_fusion/src/: esekf_node.cpp
